<resources>
    <string name="app_name">爱进步物联网</string>
    <string name="title_activity_home">notitle</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">手机号码</string>
    <string name="prompt_password">密码</string>
    <string name="password">6-25个数字或字母组成的密码</string>
    <string name="identifying_code">验证码</string>
    <string name="getcode">获取验证码</string>
    <string name="sure">确定</string>
    <string name="other_login">————— 其他登录方式 —————</string>
    <string name="forget_password">忘记密码？</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="action_sign_in">登录</string>
    <string name="next_step">下一步</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!--baidu face-->
    <string name="detect_no_face">未检测到人脸</string>
    <string name="detect_face_in">把脸移入框内</string>
    <string name="detect_zoom_in">手机拿近一点</string>
    <string name="detect_zoom_out">手机拿远一点</string>
    <string name="detect_head_up">头抬高些</string>
    <string name="detect_head_down">头放低些</string>
    <string name="detect_head_left">向左调整下头部角度</string>
    <string name="detect_head_right">向右调整下头部角度</string>
    <string name="detect_occ_face">脸部有遮挡</string>
    <string name="detect_occ_left_eye">左眼有遮挡</string>
    <string name="detect_occ_right_eye">右眼有遮挡</string>
    <string name="detect_occ_nose">鼻子有遮挡</string>
    <string name="detect_occ_mouth">嘴部有遮挡</string>
    <string name="detect_left_contour">左脸颊有遮挡</string>
    <string name="detect_right_contour">右脸颊有遮挡</string>
    <string name="detect_chin_contour">下巴有遮挡</string>
    <string name="detect_low_light">光线再亮些</string>
    <string name="detect_keep">请握稳手机，视线平视手机</string>
    <string name="detect_standard">请正对手机</string>
    <string name="detect_timeout">检测超时</string>
    <string name="liveness_eye">眨眨眼</string>
    <string name="liveness_eye_left">请眨眨左边眼睛</string>
    <string name="liveness_eye_right">请眨眨右边眼睛</string>
    <string name="liveness_mouth">张张嘴</string>
    <string name="liveness_head_left">向左缓慢转头</string>
    <string name="liveness_head_right">向右缓慢转头</string>
    <string name="liveness_head_left_right">摇摇头</string>
    <string name="liveness_head_up">缓慢抬头</string>
    <string name="liveness_head_down">缓慢低头</string>
    <string name="liveness_good">非常好</string>
</resources>
