<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.ForggetPwdActivity">


<LinearLayout
    android:background="@color/white"
    android:gravity="center"
    android:layout_weight="1"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_back_forgetpwd"
        android:layout_weight="1"
        android:src="@mipmap/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_weight="15"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

</LinearLayout>

    <LinearLayout
        android:background="#f5f5f5"
        android:layout_weight="10"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <View
            android:visibility="invisible"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp">
        </View>


        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_phone_forgetpwd"
                    android:background="@drawable/edittext_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableLeft="@mipmap/icon_sj"
                    android:hint="@string/prompt_email"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <android.support.design.widget.TextInputLayout
                    android:layout_weight="3"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_identifying_code_forgetpwd"
                        android:background="@drawable/edittext_login"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/identifying_code"
                        android:drawableLeft="@mipmap/icon_yzm"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_getcode_forgetpwd"
                    android:layout_marginLeft="10dp"
                    android:background="@color/login_green"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/getcode"
                    />

            </LinearLayout>


            <Button
                android:id="@+id/btn_next_step_forgetpwd"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/login_green"
                android:text="@string/next_step"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>


        <View
            android:visibility="invisible"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"></View>

    </LinearLayout>


</LinearLayout>