<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/bg1"
    tools:context=".activity.LoginActivity">


    <LinearLayout
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <View
            android:visibility="invisible"
            android:layout_weight="4"
            android:layout_width="wrap_content"
            android:layout_height="0dp">
        </View>


        <LinearLayout
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_phone_login"
                    android:background="@drawable/edittext_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableLeft="@mipmap/icon_sj"

                    android:hint="@string/prompt_email"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_password_login"
                    android:background="@drawable/edittext_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:hint="@string/prompt_password"
                    android:drawableLeft="@mipmap/icon_mm"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/tv_forgetpwd_login"
                android:layout_marginTop="16dp"
                android:textSize="15sp"
                android:textColor="@color/orange"
                android:gravity="right|center_horizontal"
                android:text="@string/forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_login_login"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/login_green"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textStyle="bold" />
            <TextView
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/other_login"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <View
                    android:visibility="invisible"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="0dp"></View>
                <ImageView
                    android:id="@+id/iv_face_login"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_rlsb"
                    />
                <ImageView
                    android:id="@+id/iv_code_login"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_ewmdl"
                    />

                <View
                    android:visibility="invisible"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="0dp"></View>


            </LinearLayout>

        </LinearLayout>


        <View
            android:visibility="invisible"
            android:layout_weight="4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"></View>

    </LinearLayout>


</LinearLayout>